--- a/laravel-backend/.env.example
+++ b/laravel-backend/.env.example
@@ -4,6 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+FRONTEND_URL=http://localhost:5174
+SANCTUM_STATEFUL_DOMAINS=localhost:5174
+SESSION_DOMAIN=localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,7 +22,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
